src/assets/read.css
.container {
height: 80vh;
margin-top: 30px;
/* From https://css.glass */
background: rgba(177, 151, 252, 0.79);
border-radius: 16px;
box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
backdrop-filter: blur(4.6px);
-webkit-backdrop-filter: blur(4.6px);
border: 1px solid rgba(177, 151, 252, 0.45);
}


.sentence {
display: flex;
flex-direction: row;
margin-top: 50px;
margin-bottom: 50px;
flex-wrap: wrap;
padding-left: 35px;
padding-right: 20px;
text-align: center;
}

.card {
display: flex;
justify-content: center;
min-width: 90vw;
max-width: 90vw;
min-height: 70vh;
border-radius: 10px;
background-color: white;
/* margin: auto; */



}
.carousel__pagination {
	padding: 0;
	margin: 0;
}

.carousel__pagination-button {
	width: 5px;
	margin: 10px;
}
.carousel__prev,
.carousel__next {
	border: 5px solid white;
	background-color: rgba(124,41,232,0.75);
	width: 100px;
	height: 100px;
	border-radius: 50%;
}

.text-btn {
	margin: auto;
	padding: 0;
	margin-right: 8px;
	font-size: 25px;
}

.text-btn:hover {
	cursor: pointer;
	color:rgba(255, 104, 104, 0.842);
	transition: .2s;
}

.reading-array {
	border: 5px solid #B197FC ;
	border-radius: 10px;
	position: absolute;
	top: 45%;
	left: 50%;
	transform: translate(-50%, -50%);
	padding: 20px;
	box-shadow: 0 1px 30px rgb(132, 132, 132);
	
}

#text-output { 
    border: none;
}

.mic-btn {
	position: absolute;
	top: 90%;
	left: 50%;
	transform: translate(-50%, -50%);
}

.mic-btn-start { 
    color: rgba(104, 255, 144, 0.842);
    width: 100px;
    border-radius: 50%;
  
}

.mic-btn-start:hover {
    box-shadow: 0 0 0 0 rgba(104, 255, 144, 0.842);
	transform: scale(1);
	animation: pulse_start 2s infinite;
}
.mic-btn-stop {  
    color: red;
    width: 100px;
    border-radius: 50%;
    box-shadow: 0 0 0 0 rgb(251, 4, 4);
	transform: scale(1);
	animation: pulse 2s infinite;
}

img {
	margin-top: 50px;
	box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
	border-radius: 10px;
	max-width: 80vw;
}

.correct-word {
	color: rgb(0, 255, 0);
}

.wrong-word {
	color: red;
}

.record-btn {
	margin-top: 20px;
}
@keyframes pulse {
	0% {
		transform: scale(0.95);
		box-shadow: 0 0 0 0 rgba(251, 4, 4, 0.7);
	}

	70% {
		transform: scale(1);
		box-shadow: 0 0 0 10px rgba(255, 0, 0, 0);
	}

	100% {
		transform: scale(0.95);
		box-shadow: 0 0 0 0 rgba(255, 0, 0, 0);
	}
}

@keyframes pulse_start {
	0% {
		transform: scale(0.95);
		box-shadow: 0 0 0 0 rgba(104, 255, 144, 0.842);
	}

	70% {
		transform: scale(1);
		box-shadow: 0 0 0 10px rgb(255, 255, 255);
	}

	100% {
		transform: scale(0.95);
		box-shadow: 0 0 0 0 rgb(255, 255, 255);
	}
}
@media screen and (max-width: 430px) {

	.container {
	  max-height: 100vh;
	  width: 90vw;
	}

	.text-btn {
		font-size: 14px;
	}

	.carousel__prev,
	.carousel__next {
	border: 5px solid white;
	background-color: white;
	width: 10px;
	height: 10px;

	/* img {
		width: 100px;
		height: 100px;
	} */
}

  }

  @media screen and (max-width: 768px) {
	.container {
		max-height: 100vh;
		width: 90vw;
		margin: 0px auto;
	  }
  
	  .text-btn {
		  font-size: 14px;
	  }
  
	  .carousel__prev,
	  .carousel__next {
	  border: 5px solid white;
	  background-color: white;
	  width: 10px;
	  height: 10px;
  



	}}
  

